<resources>
    <string name="app_name">TravelBuddy</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_user_profile">User</string>
    <string name="map">Map</string>
    <string name="title_activity_trip_detail">TripDetail</string>
    <string name="tab_text_1">Detail</string>
    <string name="tab_text_2">Inventory</string>
    <string name="tab_text_3">Group</string>
    <string name="tab_text_4">Trip</string>
    <string name="tab_text_5">Personal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_group_trip_detail">GroupTripDetailActivity</string>
    <string name="search_for_attraction">Search for attraction</string>
    <string name="add_to_trip">Add to trip</string>
    <string name="enter_you_name">Enter you name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="hide_attraction">Hide attraction</string>

    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="password_reset_instruction">Enter your associate email below \n to receive password reset instruction</string>
    <string name="send">send</string>
    <string name="email">Email</string>
    <string name="password_reset_link_sent">Password Reset Link Sent to Email</string>
    <string name="no_user_associated_with_email">No User Associated with the Email</string>
    <string name="email_sent">Email has been sent!</string>
    <string name="login">Login</string>
    <string name="log_out">Log out</string>

    <string name="appSharedPref">appSharedPref</string>

    <string name="serverKey">AAAAjja6Wk0:APA91bHTVxN7b50NBS7QwAPuJSOnxnrw6HmyHG6lXR5v6zb3SDMbSvENisfzjyo4SSWlkDIjKC86LDMBPyx3pSAOGBUrLGfrteU4jOvhpuGjh0XI-5uNEFxRRZqbrR89wgvB1zNGV5_b</string>
    <string name="baseUrl">https://fcm.googleapis.com/</string>
    <string name="content_type">application/json</string>
    <string name="password">Password</string>
    <string name="noInternet">Network Unavailable. Please try again later.</string>
    <string name="unexpectedBehavior">Something went wrong</string>
    <string name="fieldRequired">This field is required</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="password_reset">Password Reset</string>
    <string name="email_registration">Email Registration</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="pending">Pending</string>
    <string name="title_activity_attraction_detail">Map</string>
    <string name="trip_name">Trip name</string>
    <string name="resend_email">Resend email</string>
    <string name="updating">updating...</string>
    <string name="title_activity_maps2">Map</string>

</resources>