<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_your_password"
        android:layout_gravity="center"
        android:textColor="@color/quantum_black_100"/>

    <TextView
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:paddingTop="20dp"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Enter the email associated with your account below\n to receive password reset instruction"/>

    <ImageView
        android:background="@drawable/ic_baseline_email_24"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="200dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/resetPasswordEmailToggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        app:errorEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:id="@+id/etResetPasswordEmail"
            android:imeOptions="actionDone"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/appButton"
        android:id="@+id/btnResetPasswordSend"
        android:text="@string/send"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>