<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registerActivity">

    <TextView
        android:id="@+id/tvRegisterText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/signUpEmailToggle"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:text="@string/email_registration"
        android:gravity="center"
        android:textColor="@color/quantum_black_100"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpEmailToggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvRegisterText"
        app:layout_constraintBottom_toTopOf="@+id/signUpPasswordToggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:errorEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvRegisterText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/signUpPasswordToggle"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            android:textAlignment="gravity"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="10dp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpPasswordToggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary"
        android:scrollbarSize="25dp"
        app:layout_constraintBottom_toTopOf="@id/signUpConfirmPasswordToggle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpEmailToggle"
        app:errorEnabled="true">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/etRegisterEmail"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/etRegisterConfirmPassword"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="gravity"
            android:ems="15"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_baseline_lock_24"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpConfirmPasswordToggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary"
        android:scrollbarSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/btnRegisterSignUp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpPasswordToggle"
        app:errorEnabled="true">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRegisterConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/etRegisterPassword"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnRegisterSignUp"
            android:layout_marginTop="10dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:ems="15"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_baseline_lock_24"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/appButton"
        android:id="@+id/btnRegisterSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/signUpConfirmPasswordToggle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        />





</androidx.constraintlayout.widget.ConstraintLayout>