<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
    >

<com.sothree.slidinguppanel.SlidingUpPanelLayout
    android:id="@+id/sliding_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    app:umanoPanelHeight="200dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.fragment.app.FragmentContainerView
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".AttractionDetailActivity" />

        <com.mancj.materialsearchbar.MaterialSearchBar
            android:id="@+id/searchBar"
            style="@style/MaterialSearchBarLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="5dp"
            android:outlineProvider="bounds"
            app:mt_hint="Search a place"
            app:mt_maxSuggestionsCount="10"
            app:mt_navIconEnabled="true"
            app:mt_placeholder="Search a place"
            app:mt_speechMode="true" />


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:background="?android:attr/selectableItemBackground"
            app:cardCornerRadius="20dp">

            <Button
                android:id="@+id/btnSearchForAttraction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:text="@string/search_for_attraction"
                android:textAllCaps="false"
                android:textColor="@color/quantum_black_100"
                android:textSize="12sp" />

            <Button

                android:id="@+id/btnHideAttraction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:text="@string/hide_attraction"
                android:textAllCaps="false"
                android:textColor="@color/quantum_black_100"
                android:textSize="12sp"
                android:visibility="gone" />

        </androidx.cardview.widget.CardView>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="1dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/locationName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_xxlarge"
                        android:gravity="center_vertical"
                        android:minHeight="50dp"
                        android:paddingStart="@dimen/spacing_large"
                        android:ellipsize="end"
                        android:paddingEnd="@dimen/spacing_large"
                        android:text="Dandelion Chocolate"
                        android:maxLines="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                    <ImageView
                        android:id="@+id/locationSinglePic"
                        android:layout_width="90dp"
                        android:layout_height="70dp"
                        android:layout_alignParentEnd="true"
                        android:paddingBottom="10dp"
                        android:paddingEnd="10dp"
                         />

                    <TextView
                        android:maxLines="1"
                        android:id="@+id/locationAddress"
                        android:ellipsize="end"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/locationName"
                        android:layout_marginStart="@dimen/spacing_xxlarge"
                        android:paddingEnd="@dimen/spacing_large"
                        android:paddingStart="@dimen/spacing_large"
                        android:text="NongThatai" />

                    <RatingBar
                        android:id="@+id/locationStarRating"
                        style="@style/Yellow.Small.AppCompatRatingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/locationAddress"
                        android:layout_marginStart="@dimen/spacing_xxlarge"
                        android:numStars="5"
                        android:rating="3.5"
                        android:stepSize="0.5"
                        android:paddingEnd="@dimen/spacing_large"
                        android:paddingStart="@dimen/spacing_large"
                        android:theme="@style/Yellow.Small.AppCompatRatingBar" />

                    <TextView
                        android:id="@+id/locationRating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/locationAddress"
                        android:layout_toEndOf="@id/locationStarRating"
                        android:paddingStart="5dp"
                        android:text="4.7 (51)"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <Button
                        android:id="@+id/mapFragmentBtnAddTripDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/locationRating"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@color/white"
                        android:text="@string/add_to_trip"
                        android:textColor="@color/quantum_black_100" />

                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_large">


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="@dimen/spacing_xxlarge"
                        android:background="@color/grey_10" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_xxlarge"
                        android:text="working hour" />

                    <TextView
                        android:id="@+id/locationWorkingHour"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_xxlarge"
                        android:text="12:00 - 20:00" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"

                        android:layout_marginStart="@dimen/spacing_xxlarge"
                        android:background="@color/grey_10" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_middle"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/spacing_xxlarge"
                            android:text="Contacts" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageButton
                                android:layout_width="wrap_content"
                                android:layout_height="?attr/actionBarSize"
                                android:background="@android:color/transparent"
                                android:tint="@color/grey_20"
                                android:src="@drawable/ic_baseline_local_phone_24"
                                android:paddingEnd="5dp"/>

                            <View
                                android:layout_width="@dimen/spacing_medium"
                                android:layout_height="0dp" />

                            <TextView
                                android:id="@+id/locationPhoneNumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:text="(415) 349-0942"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textColor="@color/grey_90" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageButton
                                android:layout_width="wrap_content"
                                android:layout_height="?attr/actionBarSize"
                                android:background="@android:color/transparent"
                                android:tint="@color/grey_20"
                                android:src="@drawable/ic_baseline_email_24"
                                android:paddingEnd="5dp"/>

                            <View
                                android:layout_width="@dimen/spacing_medium"
                                android:layout_height="0dp" />

                            <TextView
                                android:id="@+id/locationWebsite"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:text="kataix2@gmail.com"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textColor="@color/grey_90" />

                        </LinearLayout>


                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/spacing_xxlarge"
                            android:text="online source" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/googleMapPicturesRecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_marginStart="@dimen/spacing_xxlarge"
                            android:layout_marginTop="10dp" />

                        <Button
                            android:id="@+id/mapFragmentBtnAddTripDetailOnSwipeUp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:background="@color/white"
                            android:text="@string/add_to_trip"
                            android:textColor="@color/quantum_black_100" />


                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>


</com.sothree.slidinguppanel.SlidingUpPanelLayout>


</RelativeLayout>
